Mudanças para gerar automaticamente as aulas

--- a/inatel-app/src/pages/home_page/css/class.css
+++ b/inatel-app/src/pages/home_page/css/class.css
@@ -50,3 +50,9 @@
     margin-right: 15px;
     transform: rotate(90deg);
 }
+.class-content-info{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+}
