--- a/inatel-app/src/pages/home_page/css/home.css
+++ b/inatel-app/src/pages/home_page/css/home.css
@@ -58,8 +58,10 @@
     width: 100%;
     overflow-y: auto;
     display: flex;
-    justify-content: center;
+    align-items: center;
     padding-top: 1%;
+    flex-direction: column;
+    gap: 5%;
 }
 .home-classes-title{
     width: 100%;
