--- a/inatel-app/src/pages/login_page/css/login.css
+++ b/inatel-app/src/pages/login_page/css/login.css
@@ -131,3 +131,18 @@ button:not(:disabled):active {
 button:disabled {
   box-shadow: rgba(60, 64, 67, .3) 0 1px 3px 0, rgba(60, 64, 67, .15) 0 4px 8px 3px;
 }
+
+table{
+  border: 2px solid black;
+  border-radius: 8px;
+  width: 100%;
+}
+table th {
+  text-align: center;
+  background-color: lightblue;
+  border-radius: 4px 4px 0 0;
+}
+th, td{
+  border: 1px solid lightgray;
+  text-align: center;
+}
